# UzE

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
Editor/: CMakeLists.txt
Editor/Source/: EntryPoint.cpp
Engine/: CMakeLists.txt
Engine/Include/UzE/: Engine.h
Engine/Source/: Engine.cpp
editor/: CMakeLists.txt
editor/resources/shaders/: unlit_color.hlsl  unlit_color.pixel.es300.glsl  unlit_color.pixel.spv  unlit_color.vertex.es300.glsl  unlit_color.vertex.spv
editor/source/: entry_point.cpp
engine/: CMakeLists.txt
engine/include/uze/: common.h  log.h  platform.h
engine/include/uze/core/: buffer.h  concurrent_queue.h  file_system.h  job_system.h  random.h  scope.h  serialize_deserialize.h  type_info.h
engine/include/uze/renderer/: buffer.h  renderer.h  shader.h  vertex_array.h
engine/platform/desktop/: file_system.cpp
engine/platform/web/: file_system.cpp
engine/source/: engine.cpp  log.cpp
engine/source/core/: job_system.cpp  random.cpp  type_info.cpp
engine/source/glad/: gles3.cpp
engine/source/renderer/: buffer.cpp  opengl.h  renderer.cpp  shader.cpp  vertex_array.cpp
engine/source/renderer/glad/: gl33.h  gl_impl.cpp
engine/source_/: engine__.cpp
engine/source_/glad/: gles3.h
